# mylanggraph-poc

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  plan.md  pyproject.toml  requirements.txt  testcommands.md
.github/: pull_request_template.md
.github/workflows/: ci.yml
configs/: benchmark_tasks.yaml  graph_config.dev.yaml  graph_config.prod.yaml  graph_config.stage.yaml  graph_config.yaml  kpi_targets.yaml  mcp_tools.yaml  models.yaml  tenants.yaml  workflows.yaml
data/annotations/: sample_preferences.jsonl
data/datasets/: manifest.json
data/graph/: entities.json
data/instructlab/: dataset.jsonl
data/metrics/: cost_latency.jsonl  (+5 more)
demo/: autonomous_analyst.yaml  feature_request.yaml  feature_request_generated.yaml  graphrag.yaml  rag_qa.yaml  sample_trajectory.json
docs/: api_spec.md  backend_plan_java.md  backend_plan_python.md  codex_prompts.md  flow-diagram.md  frontend_plan.md  gemini_prompts.md  implementation.md  plan.md  prompt_tuning.md  raft.md  scenarios.md  strategies.md  validation_report.md
scripts/: __init__.py  ingest.py  replay_trajectory.py  run_scenarios.py
skills/: __init__.py  registry.yaml
src/: __init__.py  runner.py
tests/: test_checkpointer.py  test_context_store.py  test_costs.py  test_data_pipeline.py  test_eval.py  test_evaluator.py  test_graph.py  test_hybrid.py  test_judge.py  test_langchain_agent.py  test_model_benchmark.py  test_model_policy.py  test_ops_pack.py  test_prompt_tuning.py  test_rag.py  test_rlhf.py  test_router.py  test_skills.py  test_summary.py  test_swarm.py  test_workflow_nodes.py
(+120 files in other folders)
